tests/error/comptime/check_dereference11.bz
function test()
{
	(consteval {
		let p: ?*int32 = null;
		defer *p;

		let i = 0;
		p = &i;
	});
}
